--- a/build.xml
+++ b/build.xml
@@ -5,11 +5,11 @@
 	<property name="src.dir" location="src" />
 	<property name="build.dir" location="build" />
 	<property name="classes.dir" location="${build.dir}/classes" />
-	<property name="web.dir" location="WebContent" />
-	<property name="lib.dir" location="${web.dir}/WEB-INF/lib" />
+	<property name="webcontent.dir" location="WebContent"/>
+	<property name="lib.dir" location="${webcontent.dir}/WEB-INF/lib"/>
 	<property name="ivy.retrieve.pattern" value="${lib.dir}/[artifact]­[type]­[revision].[ext]" />
 
-	<property name="web.dir" location="WebContent" />
+	<property name="webContent.dir" location="WebContent" />
 	<property name="war.file" location="martinkaru.war" />
 
 	<path id="classpath">
@@ -22,9 +22,9 @@
 	</path>
 
 	<target name="war" depends="compile">
-		<war destfile="${war.file}" webxml="${web.dir}/WEB-INF/web.xml">
+		<war destfile="${war.file}" webxml="${webcontent.dir}/WEB-INF/web.xml">
 			<classes dir="${classes.dir}" />
-			<fileset dir="${web.dir}" excludes="**/servlet-api­jar­2.5.jar" />
+			<fileset dir="${webcontent.dir}" excludes="**/servlet-api­jar­2.5.jar" />
 		</war>
 	</target>
 
