--- a/build.xml
+++ b/build.xml
@@ -42,6 +42,7 @@
 
 	<target name="init">
 		<mkdir dir="${classes.dir}" />
+		<mkdir dir="${webContent.dir}/WEB-INF/lib" />
 	</target>
 
 	<target name="clean">
