--- a/build.xml
+++ b/build.xml
@@ -5,8 +5,8 @@
 	<property name="src.dir" location="src" />
 	<property name="build.dir" location="build" />
 	<property name="classes.dir" location="${build.dir}/classes" />
-	<property name="webcontent.dir" location="WebContent"/>
-	<property name="lib.dir" location="${webcontent.dir}/WEB-INF/lib"/>
+	
+	<property name="lib.dir" value="WebContent/WEB-INF/lib" />
 	<property name="ivy.retrieve.pattern" value="${lib.dir}/[artifact].[type].[revision].[ext]" />
 
 	<property name="webContent.dir" location="WebContent" />
@@ -22,9 +22,9 @@
 	</path>
 
 	<target name="war" depends="compile">
-		<war destfile="${war.file}" webxml="${webcontent.dir}/WEB-INF/web.xml">
+		<war destfile="${war.file}" webxml="${webContent.dir}/WEB-INF/web.xml">
 			<classes dir="${classes.dir}" />
-			<fileset dir="${webcontent.dir}" excludes="**/servlet-api.jar.2.5.jar" />
+			<fileset dir="${webContent.dir}" excludes="**/servlet-api.jar.2.5.jar" />
 		</war>
 	</target>
 
@@ -42,6 +42,7 @@
 
 	<target name="init">
 		<mkdir dir="${classes.dir}" />
+		<mkdir dir="${webContent.dir}/WEB-INF/lib" />
 	</target>
 
 	<target name="clean">
